Bug 368165 - animation branch - play is broken
Summary: animation branch - play is broken
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-09-02 18:41 UTC by animtim
Modified: 2016-09-03 09:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2016-09-02 18:41:39 UTC
Application: krita (3.0.1 Beta (git c54ca61))

Qt Version: 5.7.0
Frameworks Version: 5.25.0
Operating System: Linux 4.8.0-rc2-mainline x86_64
Distribution: "Manjaro Linux"

-- Information about the crash:
- What I was doing when the application crashed:
On tha latest commit in animation branch, play is broken and crash krita.

The crash can be reproduced every time.

-- Backtrace:
Application: Krita (krita), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4e622be840 (LWP 4672))]

Thread 11 (Thread 0x7f4e0affa700 (LWP 4683)):
#0  0x00007f4e565c84b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936b0c in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a9325ea in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f4e0b7fb700 (LWP 4682)):
#0  0x00007f4e565c84b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936b0c in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a9325ea in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f4e0bffc700 (LWP 4681)):
#0  0x00007f4e565c84b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936b0c in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a9325ea in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f4e24d96700 (LWP 4680)):
#0  0x00007f4e565c84b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936b0c in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a9325ea in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f4e25597700 (LWP 4678)):
#0  0x00007f4e565c810f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936bbb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5b9eb9f9 in ?? () from /usr/lib/libQt5Widgets.so.5
#3  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f4e26199700 (LWP 4677)):
#0  0x00007f4e59cfaffd in nanosleep () from /usr/lib/libc.so.6
#1  0x00007f4e5a9d5e7d in ?? () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a935201 in QThread::msleep(unsigned long) () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e60edab6a in KisTileDataSwapper::run (this=0x7f4e613636a0 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder+64>) at /home/timo/kde/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:97
#4  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f4e2699a700 (LWP 4676)):
#0  0x00007f4e565c810f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e5a936bbb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f4e5a93009b in QSemaphore::acquire(int) () from /usr/lib/libQt5Core.so.5
#3  0x00007f4e60ec0eee in KisTileDataPooler::waitForWork (this=0x7f4e61363660 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>) at /home/timo/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007f4e60ec163a in KisTileDataPooler::run (this=0x7f4e61363660 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>) at /home/timo/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#6  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#7  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f4e3d042700 (LWP 4675)):
#0  0x00007f4e543d0f84 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f4e5438c690 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007f4e5438cf8b in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f4e5438d17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f4e5ab513eb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f4e5aafe7aa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#6  0x00007f4e5a931443 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#7  0x00007f4e55f10dc5 in ?? () from /usr/lib/libQt5DBus.so.5
#8  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f4e3e172700 (LWP 4674)):
#0  0x00007f4e565c810f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f4e420a7393 in ?? () from /usr/lib/xorg/modules/dri/r600_dri.so
#2  0x00007f4e420a6ad7 in ?? () from /usr/lib/xorg/modules/dri/r600_dri.so
#3  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f4e4c65a700 (LWP 4673)):
#0  0x00007f4e59d2248d in poll () from /usr/lib/libc.so.6
#1  0x00007f4e585ef8e0 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f4e585f1679 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f4e4e19d1a9 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f4e5a935df8 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f4e565c2454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f4e59d2b7df in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f4e622be840 (LWP 4672)):
[KCrash Handler]
#5  QScopedPointer<KisAnimationCurve::Private, QScopedPointerDeleter<KisAnimationCurve::Private> >::operator-> (this=0x0) at /usr/include/qt/QtCore/qscopedpointer.h:119
#6  KisAnimationCurve::channel (this=0x0) at /home/timo/kde/src/krita/plugins/dockers/animation/kis_animation_curves_model.cpp:49
#7  KisAnimationCurvesModel::setData (this=0x88b28a0, index=..., value=..., role=357) at /home/timo/kde/src/krita/plugins/dockers/animation/kis_animation_curves_model.cpp:188
#8  0x00007f4e29bbbf03 in KisTimeBasedItemModel::slotPlaybackFrameChanged (this=0x88b28a0) at /home/timo/kde/src/krita/plugins/dockers/animation/kis_time_based_item_model.cpp:402
#9  0x00007f4e5ab2ac39 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#10 0x00007f4e61d4975f in KisAnimationPlayer::uploadFrame (this=0x8c7b510, frame=0) at /home/timo/kde/src/krita/libs/ui/canvas/kis_animation_player.cpp:293
#11 0x00007f4e5ab2ac39 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#12 0x00007f4e5ab36fd8 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib/libQt5Core.so.5
#13 0x00007f4e5ab2bb6b in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#14 0x00007f4e5b7e65ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#15 0x00007f4e5b7ed5f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#16 0x00007f4e61caea47 in KisApplication::notify (this=<optimized out>, receiver=0x8cfdc20, event=0x7ffd74ea3ca0) at /home/timo/kde/src/krita/libs/ui/KisApplication.cpp:510
#17 0x00007f4e5ab005d0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#18 0x00007f4e5ab503ee in QTimerInfoList::activateTimers() () from /usr/lib/libQt5Core.so.5
#19 0x00007f4e5ab50924 in ?? () from /usr/lib/libQt5Core.so.5
#20 0x00007f4e5438ce67 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0x00007f4e5438d0d0 in ?? () from /usr/lib/libglib-2.0.so.0
#22 0x00007f4e5438d17c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0x00007f4e5ab513cf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#24 0x00007f4e5aafe7aa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#25 0x00007f4e5ab069e5 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#26 0x0000000000404d15 in main (argc=<optimized out>, argv=<optimized out>) at /home/timo/kde/src/krita/krita/main.cc:231

Reported using DrKonqi
Comment 1 joupent 2016-09-03 09:01:47 UTC
Git commit f382dee51e9b8561588060b4d168e1e7e2b6bccf by Jouni Pentikäinen.
Committed on 03/09/2016 at 08:38.
Pushed by jounip into branch 'animation-pentikainen'.

Fix crash on playback

M  +1    -0    plugins/dockers/animation/kis_animation_curves_model.cpp

http://commits.kde.org/krita/f382dee51e9b8561588060b4d168e1e7e2b6bccf