Fix crash on playback

BUG: 368165